# moremem0

./: .env.example  .gitignore  Makefile  README.md  projectBrief.md  pyproject.toml
docs/: changelog.md
examples/mem0-demo/: pnpm-lock.yaml
examples/vercel-ai-sdk-chat-app/: package-lock.json  package.json  vite.config.ts
mem0/: __init__.py
mem0-ts/: package.json  pnpm-lock.yaml
mem0/client_simplified/: main.py
mem0/configs/: base.py  prompts.py
mem0/embeddings/: aliyun.py  base.py  configs.py  siliconflow.py
mem0/graphs/: configs.py  tools.py  utils.py
mem0/llms/: aliyun.py  configs.py  zhipu.py
mem0/memory/: graph_memory.py  main.py  setup.py  storage.py  telemetry.py  utils.py
mem0/utils/: factory.py
mem0/vector_stores/: configs.py  qdrant.py
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
robots/: __init__.py
robots/config/: base.py
robots/qqBot/: main.py
robots/wechatBot/: main.py
server/: .env.example  Dockerfile  README.md  docker-compose.ubuntu.yml  docker-compose.windows.yml  docker-compose.yml  main.py  requirements.txt
server/frontend/: Dockerfile  index.html  mem0-vercel-ai-provider-0.0.10.tgz  nginx.conf  package-lock.json  package.json  vite.config.ts
server_local/: Dockerfile  docker-compose.yml  main.py  requirements.txt  test_server_local.rest  wait-for-it.sh
tests/: test_main.py
tests/embeddings/: test_siliconflow_embeddings.py
vercel-ai-sdk/: .env.example  README.md  mem0-vercel-ai-provider-0.0.12.tgz  package.json  pnpm-lock.yaml  teardown.ts  tsconfig.json
(+42 files in other folders)
